Move jvm stats to jvm-stats.jar, rewrote jvm stats to show cpu usage and many other things

--- a/jvm-stats/Makefile
+++ b/jvm-stats/Makefile
@@ -11,4 +11,6 @@ clean:
 	rm -Rf build jvm-stats.jar
 
 r: compile
-	java -cp ${CP}:build JvmGcStats
+	java -cp ${CP}:build JvmGcStats 
+	echo
+	java -cp ${CP}:build JvmGcStats -c
